--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port: 8080
 
+spring:
   ## 配置数据源：建立多个数据库连接并保存在数据库连接池中，当需要访问数据库时，
   ## 直接引用datasource获取数据库的连接对象即可，访问结束，又放回数据库连接池中
   datasource:
